tests/invalid/when_condition_type_mismatch.wio
fn ClampPositive(x: i32) -> i32 when ("hello") else 0 {
    return x;
}

fn Entry() -> i32 {
    return ClampPositive(5);
}
